# AI-tinkeres-2026

./: .gitignore  ARQUITETURA.md  ARQUITETURA_INTEGRACOES.md  SETUP.md  STATUS_DADOS.md  jornada-do-usuario.md
backend/: .env.example  .gitignore  ai_mock.py  chat.py  chat_session.py  copilot.py  main.py  mock.py  requirements.txt
backend-2/: .gitignore  README.md  backend.md  pyproject.toml  requirements.txt
backend-2/docs/: api_contract.md  example_request.json
backend-2/notebooks/: 01_extract_gfs_mt.ipynb  02_extract_era5_mt.ipynb  03_prepare_safra_data.ipynb  04_build_feature_store.ipynb  05_risk_score_mvp.ipynb  06_export_app_payload.ipynb
backend-2/src/: main.py  schemas.py
backend-2/src/features/: response_builder.py
backend-2/src/ingest/: climate_forecast.py  municipality_lookup.py  spatial_context.py
backend-2/src/scoring/: alerts.py  risk.py
backend-2/tests/: test_pipeline.py
backend/data/raw/: municipios_mt.geojson
backend/dataset/: extracao_mt_5_anos.csv  parametros_do_solo.csv
backend/docs/: api_contract.md  example_response.json
backend/routers/: analysis.py
backend/src/: __init__.py  main.py  pipeline.py  schemas.py
backend/src/features/: __init__.py  agro_context.py  map_layer.py  production_history.py  (+3 more)
backend/tests/: test_pipeline.py
data/: api.py  app.py  database.py  etl.py  google_cloud_bucket.py  google_earth.py  googlecloud.py  integracao_gcs.py  mock_analysis_response.json
frontend/: .gitignore  ADAPTAÇÕES.md  index.html  package-lock.json  package.json
frontend/src/: config.ts  index.css  router.tsx
(+24 files in other folders)
