[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safraviva-backend"
version = "0.1.0"
description = "SafraViva MVP backend API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn>=0.29.0,<1.0.0",
  "pydantic>=1.10.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.setuptools]
packages = ["src", "src.ingest", "src.features", "src.scoring", "src.utils"]
